PCNT: UNIT cluster, field arrays

--- a/esp32/svd/patches/esp32.yaml
+++ b/esp32/svd/patches/esp32.yaml
@@ -94,6 +94,12 @@ LEDC:
       "*":
         modifiedWriteValues: oneToClear
 
+PCNT:
+  U%s_STATUS:
+    _modify:
+      CORE_STATUS_U0:
+        name: CORE_STATUS
+  _include: ../../../common_patches/pcnt.yaml
 
 SPI0:
   _include:
