--- a/esp32s3/svd/patches/esp32s3.yaml
+++ b/esp32s3/svd/patches/esp32s3.yaml
@@ -45,6 +45,9 @@ UHCI0:
 TIMG0:
   _include: ../../../common_patches/tim_expand_and_collect.yaml
 
+PCNT:
+  _include: ../../../common_patches/pcnt.yaml
+
 SPI[12]:
   _include: ../../../common_patches/spi_w.yaml
 
