PCNT: UNIT cluster, field arrays

--- a/esp32h2/svd/patches/esp32h2.yaml
+++ b/esp32h2/svd/patches/esp32h2.yaml
@@ -66,6 +66,9 @@ UHCI0:
 TIMG0:
   _include: ../../../common_patches/tim_collect.yaml
 
+PCNT:
+  _include: ../../../common_patches/pcnt.yaml
+
 SPI[12]:
   _include: ../../../common_patches/spi_w.yaml
 
