--- a/esp32c6/svd/patches/esp32c6.yaml
+++ b/esp32c6/svd/patches/esp32c6.yaml
@@ -118,6 +118,9 @@ UHCI0:
 TIMG0:
   _include: ../../../common_patches/tim_collect.yaml
 
+PCNT:
+  _include: ../../../common_patches/pcnt.yaml
+
 SPI[12]:
   _include: ../../../common_patches/spi_w.yaml
 
