--- a/esp32c6/svd/patches/esp32c6.yaml
+++ b/esp32c6/svd/patches/esp32c6.yaml
@@ -103,6 +103,9 @@ UHCI0:
     - ../../../common_patches/uhci_collect.yaml
     - ../../../common_patches/int_strip.yaml
 
+TEE,LP_TEE:
+  _include: ../../../common_patches/tee.yaml
+
 TIMG0:
   _include: ../../../common_patches/tim_collect.yaml
 
