--- a/esp32h2/svd/patches/esp32h2.yaml
+++ b/esp32h2/svd/patches/esp32h2.yaml
@@ -60,6 +60,9 @@ UHCI0:
     - ../../../common_patches/uhci_collect.yaml
     - ../../../common_patches/int_strip.yaml
 
+TEE:
+  _include: ../../../common_patches/tee.yaml
+
 TIMG0:
   _include: ../../../common_patches/tim_collect.yaml
 
