--- a/common_patches/aes.yaml
+++ b/common_patches/aes.yaml
@@ -6,10 +6,12 @@ KEY_?:
   _modify:
     KEY_?:
       name: KEY
+  KEY: [0, 0xffff_ffff]
 TEXT_IN_?:
   _modify:
     TEXT_IN_?:
       name: TEXT_IN
+  TEXT_IN: [0, 0xffff_ffff]
 TEXT_OUT_?:
   _modify:
     TEXT_OUT_?:
