--- a/esp32s2/svd/patches/esp32s2.yaml
+++ b/esp32s2/svd/patches/esp32s2.yaml
@@ -12,6 +12,10 @@ AES:
       name: "T0_MEM[%s]"
     CONTINUE_OP:
       name: CONTINUE
+  "KEY*":
+    KEY: [0, 0xffff_ffff]
+  "TEXT_IN*":
+    TEXT_IN: [0, 0xffff_ffff]
   CONTINUE:
     _modify:
       CONTINUE_OP:
