--- a/esp32s3/svd/patches/esp32s3.yaml
+++ b/esp32s3/svd/patches/esp32s3.yaml
@@ -9,6 +9,10 @@ _modify:
     groupName: MCPWM
 
 AES:
+  "KEY*":
+    KEY: [0, 0xffff_ffff]
+  "TEXT_IN*":
+    TEXT_IN: [0, 0xffff_ffff]
   INT_CLR:
     _modify:
       INT_CLEAR:
