ESP32-H2: Fix 802.15.4 base-address

--- a/esp32h2/svd/patches/esp32h2.yaml
+++ b/esp32h2/svd/patches/esp32h2.yaml
@@ -295,3 +295,7 @@ TWAI0:
         name: TX_BYTE_11
       DATA_12:
         name: TX_BYTE_12
+
+_modify:
+  IEEE802154:
+    baseAddress: 0x600A3000
