Strip `SARADC_` prefix in `APB_SARADC/CTRL` registers

--- a/esp32c2/svd/patches/esp32c2.yaml
+++ b/esp32c2/svd/patches/esp32c2.yaml
@@ -14,6 +14,10 @@ APB_SARADC:
       name: CTRL_DATE
   CLKM_CONF:
     _strip: REG_
+  CTRL2:
+    _strip: SARADC_
+  CTRL:
+    _strip: SARADC_
   _include:
     - ../../../common_patches/int_strip.yaml
     - ../../../common_patches/adc.yaml
