--- a/esp32p4/svd/patches/esp32p4.yaml
+++ b/esp32p4/svd/patches/esp32p4.yaml
@@ -47,6 +47,10 @@ LP_ANA:
     COMD?: {}
   _include: ../../../common_patches/int_strip.yaml
 
+I2C0:
+  _include:
+    - ../../../common_patches/i2c0.yaml
+
 SPI[01]:
   _strip: SPI_MEM_
   "*":
