--- a/esp32s3/svd/patches/esp32s3.yaml
+++ b/esp32s3/svd/patches/esp32s3.yaml
@@ -32,7 +32,9 @@ I2C0:
   _modify:
     INT_STATUS:
       name: INT_ST
-  _include: ../../../common_patches/int_strip.yaml
+  _include: 
+    - ../../../common_patches/int_strip.yaml
+    - ../../../common_patches/i2c0.yaml
 
 RTC_I2C:
   CMD*:
