--- a/esp32s3/svd/patches/esp32s3.yaml
+++ b/esp32s3/svd/patches/esp32s3.yaml
@@ -1,5 +1,112 @@
 _svd: ../esp32s3.base.svd
 
+_add:
+  NRX:
+    description: NRX Peripheral
+    baseAddress: 0x6001CC00
+    groupName: NRX
+    addressBlock:
+      offset: 0x0
+      size: 0x4
+      usage: registers
+    registers:
+      NRXPD_CTRL:
+        description: "NRX Power Down Control Register"
+        addressOffset: 0xD4
+        size: 0x4
+        access: read-write
+        fields:
+          CHAN_EST_FORCE_PU:
+            description: "Force Power Up for Channel Estimation"
+            bitOffset: 7
+            bitWidth: 1
+            access: read-write
+          CHAN_EST_FORCE_PD:
+            description: "Force Power Down for Channel Estimation"
+            bitOffset: 6
+            bitWidth: 1
+            access: read-write
+          RX_ROT_FORCE_PU:
+            description: "Force Power Up for RX Rotation"
+            bitOffset: 5
+            bitWidth: 1
+            access: read-write
+          RX_ROT_FORCE_PD:
+            description: "Force Power Down for RX Rotation"
+            bitOffset: 4
+            bitWidth: 1
+            access: read-write
+          VIT_FORCE_PU:
+            description: "Force Power Up for Viterbi Decoder"
+            bitOffset: 3
+            bitWidth: 1
+            access: read-write
+          VIT_FORCE_PD:
+            description: "Force Power Down for Viterbi Decoder"
+            bitOffset: 2
+            bitWidth: 1
+            access: read-write
+          DEMAP_FORCE_PU:
+            description: "Force Power Up for Demapper"
+            bitOffset: 1
+            bitWidth: 1
+            access: read-write
+          DEMAP_FORCE_PD:
+            description: "Force Power Down for Demapper"
+            bitOffset: 0
+            bitWidth: 1
+            access: read-write
+  FE:
+    description: need des
+    baseAddress: 0x60006000
+    groupName: FE
+    addressBlock:
+      offset: 0x0
+      size: 0x4
+      usage: registers
+    registers:
+      GEN_CTRL:
+          description: "FE General Control Register"
+          addressOffset: 0x0090
+          size: 0x2
+          access: read-write
+          fields:
+            IQ_EST_FORCE_PU:
+              description: "Force Power Up for IQ Estimation"
+              bitOffset: 5
+              bitWidth: 1
+              access: read-write
+            IQ_EST_FORCE_PD:
+              description: "Force Power Down for IQ Estimation"
+              bitOffset: 4
+              bitWidth: 1
+              access: read-write
+  FE2:
+    description: need des
+    baseAddress: 0x60005000
+    groupName: FE
+    addressBlock:
+      offset: 0x0
+      size: 0x4
+      usage: registers
+    registers:
+      TX_INTERP_CTRL:
+          description: "FE2 TX Interpolation Control Register"
+          addressOffset: 0x00f0
+          size: 0x20
+          access: read-write
+          fields:
+            TX_INF_FORCE_PU:
+              description: "Force Power Up field"
+              bitOffset: 10
+              bitWidth: 1
+              access: read-write
+            TX_INF_FORCE_PD:
+              description: "Force Power Down field"
+              bitOffset: 9
+              bitWidth: 1
+              access: read-write
+
 _modify:
   SPI?:
     groupName: SPI
