Make arrays from CSx_DIS on every chip

--- a/esp32s2/svd/patches/esp32s2.yaml
+++ b/esp32s2/svd/patches/esp32s2.yaml
@@ -236,7 +236,17 @@ SPI0:
           bitOffset: 0
           bitWidth: 8
           access: read-write
-
+  MISC:
+    _delete: ["CS0_DIS", "CS1_DIS", "CS2_DIS", "CS3_DIS", "CS4_DIS", "CS5_DIS"]
+    _add:
+      CS%s_DIS:
+        dim: 6
+        dimIndex: 0-5
+        dimIncrement: 0x1
+        description: "Set this bit to raise high SPI_CS%s pin, which means that the SPI device(Ext_RAM(0)/flash(1)) connected to SPI_CS%s is in low level when SPI1 transfer starts"
+        bitOffset: 0
+        bitWidth: 1
+        access: read-write
 
   _include:
     - ../../../common_patches/spi_dma_int_strip.yaml
