--- a/esp32s3/svd/patches/esp32s3.yaml
+++ b/esp32s3/svd/patches/esp32s3.yaml
@@ -80,6 +80,31 @@ TIMG0:
 PCNT:
   _include: ../../../common_patches/pcnt.yaml
 
+SPI0:
+  MISC:
+    _add:
+      CS%s_DIS:
+        dim: 2
+        dimIndex: 0-1
+        dimIncrement: 0x1
+        description: "Set this bit to raise high SPI_CS%s pin, which means that the SPI device(Ext_RAM(0)/flash(1)) connected to SPI_CS%s is in low level when SPI1 transfer starts"
+        bitOffset: 0
+        bitWidth: 1
+        access: read-write
+
+SPI1:
+  MISC:
+    _delete: ["CS0_DIS", "CS1_DIS"]
+    _add:
+      CS%s_DIS:
+        dim: 2
+        dimIndex: 0-1
+        dimIncrement: 0x1
+        description: "Set this bit to raise high SPI_CS%s pin, which means that the SPI device(Ext_RAM(0)/flash(1)) connected to SPI_CS%s is in low level when SPI1 transfer starts"
+        bitOffset: 0
+        bitWidth: 1
+        access: read-write
+
 SPI[12]:
   _include: ../../../common_patches/spi_w.yaml
 
