Fix `I2C/COMD/OPCODE` values

--- a/esp32/svd/patches/esp32.yaml
+++ b/esp32/svd/patches/esp32.yaml
@@ -6,6 +6,7 @@ I2C0:
       name: INT_ST
   _include:
     - ../../../common_patches/i2c0.yaml
+    - ../../../common_patches/i2c_opcode.yaml
 
 RTC_I2C:
   _modify:
