Debug Assist: Fix typo in register name

--- a/esp32c6/svd/patches/esp32c6.yaml
+++ b/esp32c6/svd/patches/esp32c6.yaml
@@ -460,3 +460,7 @@ DMA:
         name: OUT_PRI
       OUT_PERI_SEL_CH?:
         name: OUT_PERI_SEL
+
+ASSIST_DEBUG:
+  _include: ../../../common_patches/assist_debug.yaml
+  
