--- a/esp32c3/svd/patches/esp32c3.yaml
+++ b/esp32c3/svd/patches/esp32c3.yaml
@@ -337,3 +337,7 @@ DMA:
         name: OUT_PRI
       OUT_PERI_SEL_CH?:
         name: OUT_PERI_SEL
+
+ASSIST_DEBUG:
+  _include: ../../../common_patches/assist_debug.yaml
+  
