Fix typo in another register name

--- a/common_patches/assist_debug.yaml
+++ b/common_patches/assist_debug.yaml
@@ -1,3 +1,5 @@
 _modify:
   "C0RE_0_DEBUG_MODE":
     name: "CORE_0_DEBUG_MODE"
+  "C0RE_0_LASTPC_BEFORE_EXCEPTION":
+    name: "CORE_0_LASTPC_BEFORE_EXCEPTION"
