--- a/common_patches/assist_debug.yaml
+++ b/common_patches/assist_debug.yaml
@@ -1,5 +1,11 @@
 _modify:
   "C0RE_0_DEBUG_MODE":
     name: "CORE_0_DEBUG_MODE"
+    description: "ASSIST_DEBUG_CORE_0_DEBUG_MODE"
   "C0RE_0_LASTPC_BEFORE_EXCEPTION":
     name: "CORE_0_LASTPC_BEFORE_EXCEPTION"
+    description: "ASSIST_DEBUG_CORE_0_LASTPC_BEFORE_EXCEPTION"
+  "CORE_0_MONTR_ENA":
+    description: "ASSIST_DEBUG_CORE_0_MONTR_ENA_REG"
+
+
