--- a/common_patches/tim_int_strip.yaml
+++ b/common_patches/tim_int_strip.yaml
@@ -1,10 +1,12 @@
-INT_RAW_TIMERS:
+_strip_end: _TIMERS
+
+INT_RAW:
   _strip_end: _INT_RAW
-INT_ST_TIMERS:
+INT_ST:
   _strip_end: _INT_ST
-INT_ENA_TIMERS:
+INT_ENA:
   _strip_end: _INT_ENA
-INT_CLR_TIMERS:
+INT_CLR:
   _strip_end: _INT_CLR
   _modify:
     "*":
